@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** August 22, 2009 **
+The time_series plugin has been debugged and refactored.
+
 ** August 21, 2009 **
 The examples directory has been reworked.
 
